# googleTest

MyApp/: Makefile
MyApp/src/: main.cpp
MyMathLib/: Makefile
MyMathLib/inc/: Account.h  EmployeeManager.h  IDatabaseConnection.h  MyMathLib.h  Validator.h
MyMathLib/src/: Account.cpp  EmployeeManager.cpp  IDatabaseConnection.cpp  MyMathLib.cpp  Validator.cpp
Test/: CMakeLists.txt  README.md  gMock.cpp  test.cpp
